# mujoco_curobo_bridge

./: .gitignore  README.md  pyproject.toml  requirements.txt
bridge/: config.py  curobo_loader.py  motion_planner_bridge.py  mujoco_loader.py  sphere_bridge.py  state_sync.py  world_bridge.py
demos/: 01_load_panda.py  02_fit_mujoco_spheres.py  04_curobo_joint.py  05_fk_bridge.py  06_fk_bridge.py  07_collision_spheres.py  08_world_test.py  09_world_viewer.py  10_world_config_test.py  11_motion_plan.py  12_planned_playback.py  13_multi_motion.py  _bootstrap.py
robot_spheres/: README.md  __init__.py  __main__.py  cli.py  config.py  generator.py
robot_spheres/configs/: another_robot_template.json  full_robot_template.json
viewer/: sphere_renderer.py  world_renderer.py
world/: obstacle.py  world_manager.py
